<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background_login">
  <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->

  <RelativeLayout
      android:id="@+id/login_div"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="15dip"
      android:background="@drawable/background_login_div_bg"
      android:gravity="right"
      android:padding="15dip" >

  	<!-- 账号 -->
  	<TextView 
  		android:id="@+id/login_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_label_username"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/textName"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/login_user_input"
  		android:singleLine="true"
  		android:inputType="text"/>
    <!-- 密码 text -->
    <TextView 
    	android:id="@+id/login_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/textName"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/textPwd"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <!-- 登录button -->
    <CheckBox android:id="@+id/cb_rem"  
 		android:text="自动登陆"    
     android:layout_below="@id/textPwd"
     android:layout_alignRight="@id/textPwd"
     android:layout_marginRight="10dp"
    android:layout_width="wrap_content"   
    android:layout_height="wrap_content"   
    />  
     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_below="@id/cb_rem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="right"
       >
    
    <Button 
    	android:id="@+id/btn_login"
    	android:layout_width="120dp"
    	android:layout_height="wrap_content"
 		android:layout_gravity="right"
    	android:text="@string/login_label_signin"
    	android:background="@drawable/blue_button"
    />

    <Button
        android:id="@+id/btn_nolog"
        android:layout_width="120dp"
        android:layout_marginLeft ="10dp"
        android:layout_height="wrap_content"
       android:layout_gravity="right"
        android:background="@drawable/blue_button"
        android:text="随便看看" />

     </LinearLayout>
    
  </RelativeLayout>
  
  
  <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >

	    <ImageView android:id="@+id/miniTwitter_logo"
	        android:src="@drawable/ic_launcher"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="25dp"
	         />
	    
	 <ImageView android:src="@drawable/logo"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_toLeftOf="@id/miniTwitter_logo"
	     android:layout_alignBottom="@id/miniTwitter_logo"
	     android:paddingBottom="8dp"
	      />
	    </RelativeLayout>
 
</LinearLayout>
